--- a/index.html
+++ b/index.html
@@ -125,18 +125,18 @@
         </div> 
       </div>
     </section>
-    <section class="robots1  p-4">
+    <section class="robots1  p-3">
       <div class="row d-flex justify-content-between">
         <div class="col-md-6 col-12 ">
 
           <div class="card bg-dark text-white">
             <img src="./images/spot-banner-home.jpg" class="card-img" alt="spot1-image">
             <div class="card-img-overlay ms-3 me-5">
-              <h1 style="font-size: 4em" class="card-title">Spot</h1>
+              <h1  class="card-title robot_1_head">Spot</h1>
               <br>
-              <p class="card-text">Automate data capture
+              <p class="card-text robot_1_text">Automate data capture
                 and inspection.</p>
-                <a href="#" class="btn btn-lg btn-outline-light">SEE SPOT</a>
+                <a href="#" class="btn btn-lg btn-outline-light robot_1_button">SEE SPOT</a>
             </div>
           </div>
 
@@ -146,11 +146,11 @@
           <div class="card bg-dark text-white">
             <img src="./images/stretch-banner-home.jpg" class="card-img" alt="s">
             <div class="card-img-overlay ms-3 me-5">
-              <h1 style="font-size: 4em" class="card-title ">Stretch</h1>
+              <h1  class="card-title robot_1_head">Stretch</h1>
               <br>
-              <p class="card-text">Mobile, automated case handling for
+              <p class="card-text robot_1_text">Mobile, automated case handling for
                 more efficient warehouse operations.</p>
-              <a href="#" class="btn btn-lg btn-outline-light">LEARN MORE</a>
+              <a href="#" class="btn btn-lg btn-outline-light robot_1_button ">LEARN MORE</a>
             </div>
           </div>
 
